#revision 1302
	ctapmex 04.02.2010 23:40
	1. рефакторинг работы с реестром
		а) уберем отрицание из имен параметров. 
		б) define заменены на константы
		в) добавлены значения по умолчанию для параметров
		г) функции для чтения параметров принимают значение по умолчанию
		д) функция для записи всех настроек по умолчанию

#revision 1299
	ctapmex 04.02.2010 12:13
	1. поправлены valid тесты
	2. устанавливаем версию плагинов в 1.0.2.4 и собираем релиз
	3. сборка схем. тесты проходят на 100%
	4. файл истории изменения FarColor

#revision 1298
	ctapmex 04.02.2010 11:11
	1. поправлен баг в makefile, с отображением #<< . заменены тесты для него
	2. слияние с 1287

#revision 1297
	ctapmex 04.02.2010 09:58
	1. меню "Список функций" (FarEditor::showOutliner)
		а) комбинация Ctrl-Enter вставляла в редактор текст в иероглифах ( неверная кодировка)
		б) нормально вводяться в фильтр клавиши ":;-_"
		в) дополнены файлы помощи и языковые файлы
	  г) ускоренное получение строк из фара 

#revision 1296
	ctapmex 03.02.2010 15:35
	1. r1273 пункт 2 отменим, и переделаем по другому - добавим в тип xml расширение wxs и fb2
	2. исправлены дублирующие горячие клавиши в меню настройки
	3. в FarEditor::updateHighlighting добавлен быстрый доступ к строкам
	4. для типа "plain text" добалено .log и LICENSE
	5. в связи с ускорением работы, глюк с срабатыванием колорера (загрузка процессора) на неизвестных типах файлов
		по схеме <type name="default"><scheme name='default'/> можно считать исчерпанным. Т.к. если сделать какое то 
		ограничение в коде на обработку этого типа, то пропадает возможность настройки своего типа по умолчанию.

#revision 1295
	ctapmex 03.02.2010 10:52
	1. в FarEditor::editorInput не использовался хак фара для быстрого доступа к строкам. после исправления существенно
		увеличилась скорость
	2. в BaseEditor::validate исправлено возможное зацикливание
	3. маленькая оптимизация кода 

#revision 1278
	ctapmex 25.01.2010 10:21